rke2/tooling/zot/zot-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot
  namespace: tooling
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "zot.hwcopeland.net"
  rules:
    - backendRefs:
        - name: zot
          port: 5000
